# Chirp-Alpha-App

./: .gitignore  README.md  deploy.sh  run_app.sh
AI Model/: pipeline.py  pyproject.toml
AI Model/architecture/models/: index_nn.py
AI Model/eval/: validate.py
AI Model/preprocessing/: combined_jsonl.py  precompute_fintwitbert_embeddings.py
AI Model/preprocessing/data-collection/: get_yahoo_data.py
AI Model/preprocessing/data_cleaning/: stock_clean.py
Model/: .env.example  analyze_results.py  main.py  pipeline.py  pyproject.toml
Model/architecture/: data_utils.py  trainer.py
Model/architecture/models/: encoder.py  final_output.py  index_nn.py  stock_nn.py
Model/eval/: validate.py  visualize_umap.py  visualize_umap_html.py
Model/inference/: momentum.proto  momentum_pb2.py  momentum_server.py  test_client.py
Model/inference/assets/: spy_cols.pkl  spy_scaler.pkl  stock_cols.pkl  stock_scaler.pkl
Model/infra_training/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf  versions.tf
Model/logger/: logger.py  logger_color_fortmatter.py
Model/preprocessing/: combined_jsonl.py  precompute_fintwitbert_embeddings.py
Model/preprocessing/data-collection/: get_tweet_stock_data.py
Model/preprocessing/data_cleaning/: stock_clean.py  tweet_clean.py
Model/trading_account/: AlphaVisionChart.jsx  alpaca_algo_trading.py  alpaca_algo_trading_implementation.py  alpaca_trading_portfolio.py
Model/utils/: constants.py
backend/: .gitignore  Dockerfile  README.md  pom.xml
backend/src/main/proto/: momentum.proto
backend/src/main/resources/: application.properties  application.yml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/AlphaVisionChart/: AlphaVisionChart.jsx  AlphaVisionChart.module.css
frontend/src/components/Button/: Button.jsx  Button.module.css
frontend/src/hooks/: UseTickerData.js
frontend/src/pages/: About.jsx  Dashboard.jsx  LandingPage.jsx
grpc/: Dockerfile  momentum.proto  momentum_pb2.py  momentum_pb2_grpc.py  momentum_server.py  prepare_scalers.py  pyproject.toml  test_client.py
grpc/model_final/: encoder.py  final_output.py  index_nn.py  stock_nn.py
grpc/models/: balanced.pt  bearish.pt  bullish.pt  high_ic.pt
terraform/: README.MD  main.tf  outputs.tf  sync_env.sh
terraform/modules/auth/: main.tf  variables.tf
terraform/modules/compute/: main.tf  variables.tf
terraform/modules/ecr/: main.tf
terraform/modules/networking/: main.tf
(+60 files in other folders)
