[project]
name = "Hehehe"
version = "0.1.0"
description = "Package dependencies for datshiiii"
authors = [
    {name = "Matthew Hodges",email = "matthodgess384@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers (>=5.1.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "kagglehub (>=0.4.3,<0.5.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.12.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "pyarrow (>=16.0.0,<18.0.0)",
    "boto3 (>=1.38.0,<2.0.0)",
    "boto (>=2.49.0,<3.0.0)",
    "alpaca (>=1.0.0,<2.0.0)",
    "polars (>=1.40.1,<2.0.0)",
    "logger (>=1.4,<2.0)",
    "alpaca-py (>=0.43.4,<0.44.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
