[project]
name = "grpc-Chirp-Alpha"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Hodges",email = "matthodgess384@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.7.0,<6.0.0)",
    "grpcio (>=1.80.0,<2.0.0)",
    "grpcio-tools (>=1.80.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
